@@ -1,5 +1,7 @@
 Revision history for constant-tiny
 
+  - Bugfix: Avoid "redefine" warning if constant.pm is already loaded.
+
 1.00 - 2013.03.20 (SAPER)
   - First released version.
 
